--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -50,10 +50,30 @@ include::{snippets}/PayoutControllerApiTest/mustSuccessfullyCreatePayoutTaskForS
 include::{snippets}/PayoutControllerApiTest/mustSuccessfullyCreatePayoutTaskForSomeAsset/http-response.adoc[]
 
 === Fetch create payout task info
-Fetches create payout task info. Only successfully completed tasks will contain the `data` field. Possible task
-statuses are `PENDING`, `SUCCESS` and `FAILED`. Path argument is the task ID.
+Fetches create payout task info. Possible task statuses are `PENDING`, `SUCCESS` and `FAILED`. Path argument is
+the task ID.
 
 .Request
 include::{snippets}/PayoutControllerApiTest/mustSuccessfullyCreateAndExecutePayoutForSomeAsset/http-request.adoc[]
 .Response
 include::{snippets}/PayoutControllerApiTest/mustSuccessfullyCreateAndExecutePayoutForSomeAsset/http-response.adoc[]
+
+=== Fetch list of payouts
+Fetches all payouts for specified filters. Possible payout statuses are `PROOF_PENDING`, `PROOF_FAILED`, `PROOF_CREATED`
+and `PAYOUT_CREATED`. Multiple values for `status` and `assetFactories` query parameters can be specified by separating
+them with commas.
+
+.Request
+include::{snippets}/PayoutControllerApiTest/mustReturnAdminPayoutsForSomeIssuerAndOwner/http-request.adoc[]
+.Response
+include::{snippets}/PayoutControllerApiTest/mustReturnAdminPayoutsForSomeIssuerAndOwner/http-response.adoc[]
+
+=== Fetch list of payouts for investor
+Fetches claimable and claimed payouts for investor. Multiple values for `assetFactories` query parameter can be
+specified by separating them with commas. Claimable payouts will also contain proof necessary to claim them via payout
+manager contract.
+
+.Request
+include::{snippets}/PayoutControllerApiTest/mustReturnClaimedPayoutInfoForSomeInvestor/http-request.adoc[]
+.Response
+include::{snippets}/PayoutControllerApiTest/mustReturnClaimedPayoutInfoForSomeInvestor/http-response.adoc[]
